JumpScript/tests/baselines/reference/collisionExportsRequireAndAlias.errors.txt
tests/cases/compiler/collisionExportsRequireAndAlias_file2.jump(1,8): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
tests/cases/compiler/collisionExportsRequireAndAlias_file2.jump(2,8): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.


==== tests/cases/compiler/collisionExportsRequireAndAlias_file2.jump (2 errors) ====
    import require = require('collisionExportsRequireAndAlias_file1'); // Error
           ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
    import exports = require('collisionExportsRequireAndAlias_file3333'); // Error
           ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
    export function foo() {
        require.bar();
    }
    export function foo2() {
        exports.bar2();
    }
==== tests/cases/compiler/collisionExportsRequireAndAlias_file1.jump (0 errors) ====
    export function bar() {
    }
    
==== tests/cases/compiler/collisionExportsRequireAndAlias_file3333.jump (0 errors) ====
    export function bar2() {
    }